updated file structures for notes

--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -3,7 +3,7 @@ layout: default
 title: logs
 ---
 
-<article class="center mw5 mw6-ns hidden  mv4">
+<article class="center mw5 mw6-ns  mv4">
 <!--   <h1 class="f4 mv0 pv2 ph3">{{ page.title | escape }}</h1> -->
    <div class="aspect-ratio aspect-ratio--6x4 mb4">
     <div class="aspect-ratio--object cover" style="background:url({{page.image}}) center;"></div>
@@ -12,12 +12,26 @@ title: logs
     <p class="w-50 pv2 ph3">{{ page.location | escape }}</p>
     <p class="w-50 pv2 ph3">{{ page.location | escape }}</p>
   </div>
-  
+
 
 
   <div class="pa3 bt">
     <p class="f6 f5-ns lh-copy measure mv0">
+      <tr>
+  {% for iteam in page.related %}
+  <td>{{ iteam }}</td>
+  {% endfor %}
+  </tr>
+  cat
       {{ content }}
     </p>
+  </div>
+
+  <div class="">
+    <tr>
+{% for tag in page.tags %}
+<td>{{ tag }}</td>
+{% endfor %}
+</tr>
   </div>
 </article>
