--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -1,24 +1,22 @@
 ---
 layout: default
 ---
-<article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 
-  <header class="post-header">
-    <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
-    <p class="post-meta">
-      <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
-        {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-        {{ page.date | date: date_format }}
-      </time>
-      {%- if page.author -%}
-        • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author | escape }}</span></span>
-      {%- endif -%}</p>
-  </header>
-
-  <div class="post-content e-content" itemprop="articleBody">
-    {{ content }}
+<article class="center mw5 mw6-ns  mv4">
+<!--   <h1 class="f4 mv0 pv2 ph3">{{ page.title | escape }}</h1> -->
+   <div class="aspect-ratio aspect-ratio--6x4 mb4">
+    <div class="aspect-ratio--object cover" style="background:url({{page.image}}) center;"></div>
+  </div>
+  <div class="fl w-100">
+    <p class="w-50 pv2 ph3">{{ page.location | escape }}</p>
+    <p class="w-50 pv2 ph3">{{ page.location | escape }}</p>
   </div>
 
 
-  <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
+
+  <div class="pa3 bt">
+    <p class="f6 f5-ns lh-copy measure mv0">
+      {{ content }}
+    </p>
+  </div>
 </article>
