--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -14,13 +14,13 @@
 
       {% if page.url == "/" %}
       <div class="flex">
-        <a class="link dib" href="#">☁️ </a><input class="dib" type="text" id="myInput" value="{{page.title}}" >
+        <a class="link dib" href="#">☁️ </a><input st class="dib" type="text" id="myInput" value="{{page.title}}" >
               <button style="display:none;" id="myBtn" onclick="directNav()"></button>
       </div>
 
   {% else %}
   <div class="flex">
-    <span class="link dib goback" onclick="goBack();"><-</span>
+    <span class="link dib goback" onclick="goBack();"><- </span>
     <input class="dib" type="text" id="myInput" value=" {{page.title}}">
      <button style="display:none;" id="myBtn" onclick="directNav()"></button>
   </div>
