dark mode pause

--- a/_layouts/hello.html
+++ b/_layouts/hello.html
@@ -31,8 +31,11 @@ title: hello
         <!-- <h4 class="w-10 mini-title">Featured</h4> -->
 
       <div class="center w-80">
-        <div class="w-100">
+        <!-- <div class="w-100">
           <h1>Some longterm explorations I'm working on are more focused on climate mitigation strategies through the lenses of <a href="https://emergence.gndclouds.cc/biomimetic-economics/">Biomimetic Economics</a>, <a href="https://emergence.gndclouds.cc/people-computer-co-creation//">People Computer Co-creation</a>, and￼ <a href="https://emergence.gndclouds.cc/infrastructure-resiliency/">Infrastructure Resiliency</a>.</h1>
+        </div> -->
+        <div class="w-100">
+          <h1>Some longterm explorations I'm working on are more focused on climate mitigation strategies through the lenses of Biomimetic Economics, People Computer Co-creation, and￼ Infrastructure Resiliency.</h1>
         </div>
 <!--
         <div class="flex flex-wrap w-100 pv3">
@@ -99,7 +102,7 @@ title: hello
           {% endfor %}
         </div> -->
         <!-- TODO: Mabe add something about exploreimg more work or just an arrow about more work -->
-<!-- 
+<!--
         <div class="flex flex-wrap w-100 pv=3">
           <h4 class="w-100 mini-title">notes <a class="link"href="#"></a></h4>
           {% for journal in site.journal reversed limit:9 %}
