Spellcheck and Padding

--- a/_layouts/hello.html
+++ b/_layouts/hello.html
@@ -35,7 +35,7 @@ title: hello
           <h1>Some longterm explorations I'm working on are more focused on climate mitigation strategies through the lenses of <a href="https://emergence.gndclouds.cc/biomimetic-economics/">Biomimetic Economics</a>, <a href="https://emergence.gndclouds.cc/people-computer-co-creation//">People Computer Co-creation</a>, and￼ <a href="https://emergence.gndclouds.cc/infrastructure-resiliency/">Infrastructure Resiliency</a>.</h1>
         </div> -->
         <div class="w-100">
-          <h1>Some longterm explorations I'm working on are more focused on climate mitigation strategies through the lenses of Biomimetic Economics, People Computer Co-creation, and￼ Infrastructure Resiliency.</h1>
+          <h1>Some longterm explorations I'm working on are more focused on climate mitigation strategies through the lenses of Biomimetic Economics, People Computer Co-creation, andd Infrastructure Resiliency.</h1>
         </div>
 <!--
         <div class="flex flex-wrap w-100 pv3">
